[gd_scene load_steps=17 format=3 uid="uid://cqdpqkmfx6w86"]

[ext_resource type="PackedScene" uid="uid://wp2kd1pwklqu" path="res://scenes/component/gameplay/velocity_component.tscn" id="1_25x01"]
[ext_resource type="Script" path="res://scenes/entities/enemy/enemy.gd" id="1_wcbw2"]
[ext_resource type="PackedScene" path="res://scenes/component/gameplay/health_component.tscn" id="2_8n82b"]
[ext_resource type="PackedScene" uid="uid://cqgu5wmgy1xjo" path="res://scenes/component/visual/hit_flash_component.tscn" id="3_xuffe"]
[ext_resource type="PackedScene" uid="uid://pxyuuo7slsqx" path="res://scenes/component/visual/death_component.tscn" id="5_bhb62"]
[ext_resource type="PackedScene" uid="uid://ci8ci102vcxd6" path="res://scenes/component/gameplay/drop_component.tscn" id="5_tf1s1"]
[ext_resource type="PackedScene" uid="uid://dw3vwc0kj1n1l" path="res://scenes/entities/experience_vial/experience_vial.tscn" id="6_qx00i"]
[ext_resource type="PackedScene" uid="uid://dsrdawfksalsl" path="res://scenes/component/visual/shadow_component.tscn" id="7_8lq8u"]
[ext_resource type="PackedScene" uid="uid://ce78nqguqk6dk" path="res://scenes/component/gameplay/hurtbox_component.tscn" id="9_6qkxi"]

[sub_resource type="Animation" id="Animation_bryhj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Texture:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Texture:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_qtijj"]
resource_name = "walk"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Texture:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-1, 0), Vector2(1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Texture:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.174533, -0.174533, 0.174533, -0.174533]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_s48gk"]
_data = {
"RESET": SubResource("Animation_bryhj"),
"walk": SubResource("Animation_qtijj")
}

[sub_resource type="Shader" id="Shader_fa24v"]
code = "shader_type canvas_item;

uniform float lerp_percent : hint_range(0.0, 1.0);

void fragment() {
	vec4 texture_color = texture(TEXTURE, UV);
	vec4 final_color = mix(texture_color, vec4(1.0, 1.0, 1.0, texture_color.a), lerp_percent);
	COLOR = final_color;
}"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vlykd"]
resource_local_to_scene = true
shader = SubResource("Shader_fa24v")
shader_parameter/lerp_percent = null

[sub_resource type="CircleShape2D" id="CircleShape2D_f600l"]
radius = 9.05539

[sub_resource type="CircleShape2D" id="CircleShape2D_hgx7p"]
radius = 5.09902

[node name="Enemy" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 8
collision_mask = 9
script = ExtResource("1_wcbw2")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "walk"
libraries = {
"": SubResource("AnimationLibrary_s48gk")
}

[node name="VelocityComponent" parent="." instance=ExtResource("1_25x01")]
max_speed = 30

[node name="HealthComponent" parent="." instance=ExtResource("2_8n82b")]
max_health = 5.0

[node name="HitFlashComponent" parent="." node_paths=PackedStringArray("health_component", "sprite") instance=ExtResource("3_xuffe")]
health_component = NodePath("../HealthComponent")
sprite = NodePath("../Visuals/Texture")
hit_flash_material = SubResource("ShaderMaterial_vlykd")

[node name="DropComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("5_tf1s1")]
health_component = NodePath("../HealthComponent")
vial_scene = ExtResource("6_qx00i")

[node name="DeathComponent" parent="." node_paths=PackedStringArray("health_component", "sprite") instance=ExtResource("5_bhb62")]
health_component = NodePath("../HealthComponent")
sprite = NodePath("../Visuals/Texture")

[node name="Visuals" type="Node2D" parent="."]

[node name="ShadowComponent" parent="Visuals" instance=ExtResource("7_8lq8u")]
position = Vector2(1, -1)
scale = Vector2(0.0738281, 0.0310547)

[node name="Texture" type="Sprite2D" parent="Visuals"]
unique_name_in_owner = true
offset = Vector2(0, -8)

[node name="HurtboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("9_6qkxi")]
visible = false
health_component = NodePath("../HealthComponent")

[node name="Collision" type="CollisionShape2D" parent="HurtboxComponent"]
position = Vector2(0, -7)
shape = SubResource("CircleShape2D_f600l")

[node name="Collision" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_hgx7p")
